# speed-curve-fitting-tool

./: .gitignore  CMakeLists.txt  LICENSE  README.md  curve_fitting_tool_guideline.md
src/: curvecanvas.cpp  curvecanvas.h  main.cpp  mainwindow.cpp  mainwindow.h  motionslider.cpp  motionslider.h  restorablesplitter.cpp  restorablesplitter.h  resultpanel.cpp  resultpanel.h  skinprovider.cpp  skinprovider.h  sliderpanel.cpp  sliderpanel.h
todo_docs/: README.md
todo_docs/shared/: acceptance-checklist.md  core-data-direction.md  project-constraints.md
todo_docs/v1-whiteboard-ui/: 01-layout-splitters.md  02-curve-canvas-whiteboard.md  03-slider-whiteboard.md  04-result-panel-placeholder.md  05-skinning-placeholder.md  05-v1-acceptance.md  06-v1-acceptance.md  README.md
todo_docs/v2-local-curve/: 01-curve-data-model.md  02-slider-recording-samples.md  03-local-fit-functions.md  04-curve-info-overlay.md  05-motion-preview-and-area.md  06-skinning-and-preview-assets.md  06-v2-acceptance.md  07-v2-acceptance.md  README.md
todo_docs/v3-pysr/: 01-python-worker.md  02-json-protocol.md  03-pysr-fit-strategy.md  04-results-and-errors.md  05-v3-acceptance.md  README.md
